--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lucide-react": "^0.483.0",
     "mongodb": "^6.16.0",
     "next": "15.2.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
