--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.16.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.28",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
