--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
@@ -43,10 +44,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^25.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/jest": "^29.5.14",
     "eslint": "^9.39.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
