--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "postinstall": "node scripts/postinstall.mjs"
+    "postinstall": "node scripts/postinstall.mjs",
+    "seed:expenses": "tsx scripts/seed-expenses.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -53,6 +54,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "6.19",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
